# betbot

./: .gitignore  .travis.yml  CLAUDE.md  Dockerfile  Makefile  README.md  bot.py  chart_race.py  config.json  config.py  database.py  log.txt  log_hist.txt  post.py  post_main.py  pyproject.toml  requirements.txt  results.html  run.py  run_bot.sh  run_tests.sh  setup.cfg  sqlite_context.py  table.js  test_bot.py  update_matches_data.sh
.github/workflows/: ci.yml
betbot/: bot.py  commands.py  conf.py  database.py  helpers.py  messages.py  sources.py  sqlite_context.py  utils.py
data/: countries.json  matches.csv  teams.csv  uefa-2020.json
docs/: PLAN_gated_signup.md
html/: results.html  table.css  table.js
