[project]
name = "betbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dynaconf",
    "flake8>=7.3.0",
    "pytelegrambotapi==4.4.0",
    "python-dateutil",
    "pytz",
    "requests",
    "schedule==1.1.0",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
